syntax = "proto3";

package payments;

enum Status {
    PENDING = 0;
    COMPLETE = 1;
    FAILED = 2;
}

service Payments {
    rpc Pay (PaymentRequest) returns (Payment) {}
    rpc Confirm(PaymentByIdRequest) returns (Payment) {}
    rpc GetById(PaymentByIdRequest) returns (Payment) {}
    rpc GetAll(AllPaymentsRequest) returns (PaymentList) {}
}

message PaymentRequest {
    int64 amount = 2;
    string from = 3;
    string to = 4;
}

message PaymentByIdRequest {
    string id = 1;
}

message AllPaymentsRequest {}

message Payment {
    string id = 1;
    int64 amount = 2;
    string from = 3;
    string to = 4;
    Status status = 5;
}


message PaymentList {
    repeated Payment payments = 1;
}
